realize working with MainGameClientStatus.GAME_TYPE_SELECTED